--- a/index.html
+++ b/index.html
@@ -1,19 +1,65 @@
-<html>
-    <head>
-        <title>Olá, eu sou a cabeça!</title>
-    </head>
-    <body>
-        <h1>h1 eu sou o corpo</h1>
-        <h2>h2 eu sou o corpo</h2>
-    </body>
-    <ol>
-        <li>Pão</li>
-        <li>leite</li>
-        <li>cafe</li>
-    </ol>
-    <ul>
-        <li>Pão</li>
-        <li>leite</li>
-        <li>cafe</li>
-    </ul>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    
+    <title>Flavio Felipe CV</title>
+
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <div class="left-section-contents">
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image.jpeg.png" alt="Profile image">
+                    <p class="name">Flavio Felipe</p>
+                    <p class="profession">Desenvolver Web</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+55 81 9 87654-7654
+                        </li>
+                        <li><i class="fa fa-envelope"></i>helloword@gmail.com
+                        </li>
+                        <li><i class="fa fa-globe"></i>flavio.dev.com
+                        </li>
+                        <li><i class="fa fa-github"></i>FlaviooC
+                        </li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>Python3</p></li>
+                        <li><p>Java</p></li>
+                        <li><p>JavaScript, Nodejs</p></li>
+                        <li><p>HTML5 & CSS3</p></li>
+                        <li><p>SQL</p></li>
+                        <li><p>Git & GitHub</p></li>
+                        <li><p>Linux</p></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">Sobre Mim</div>
+                    <p class="about-me-contents">
+                        Olá Sou o Flavio.<br>
+                        <br> Um pouco mais sobre o que faço
+                        <br> Quais são minhas competencias
+                    </p>
+                </section>
+            </div>
+        </section>
+    </main>
+</body>
 </html>
